test/files/pos/t11917/X.java
package foo;

public class X extends A/*<String>*/ {}