test/files/neg/text-blocks/Invalid1.java
//> using jvm 15+
class Invalid1 {

    public static final String badOpeningDelimiter = """non-whitespace
      foo
    """;
}
